// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as anonymous 1`] = `
<section>
  Click to log in
   | 
  <button
    class="button"
  >
    Login
  </button>
</section>
`;

exports[`should render as authenticated 1`] = `
<section>
  Logged in as 
   | 
  <button
    class="button"
  >
    Logout
  </button>
</section>
`;
